// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product RHEL config should apply an inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product RHEL config should apply an inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance, {"context":"id"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product RHEL config should apply an inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
        isInline={true}
        variant="link"
      >
        lorem ipsum
      </Button>,
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance, {"context":"id"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product RHEL config should apply an inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        <Label
          color="purple"
        >
          t(curiosity-inventory.label_cloud_provider, {"context":"dolor sit"})
        </Label>
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "cloud_provider": {
      "title": "t(curiosity-inventory.header_cloud, {"context":"provider"})",
      "value": "dolor sit",
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance, {"context":"id"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": null,
    },
  },
}
`;

exports[`Product RHEL config should apply an inventory configuration: filtered, infinite 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": false,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product RHEL config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "id": "granularity",
            "position": "right",
          },
        ],
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Sockets",
        ],
        "isDisabledLegendClick": true,
        "isMetricDisplay": false,
        "isMultiMetric": true,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Sockets_physical",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "physical",
            },
            "stroke": "#06c",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "Sockets_virtual",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "virtual",
            },
            "stroke": "#009596",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "Sockets_cloud",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "cloud",
            },
            "stroke": "#5752d1",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#ec7a08",
            "fill": "#f4b678",
            "id": "Sockets_hypervisor",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "hypervisor",
            },
            "stroke": "#ec7a08",
            "strokeWidth": 2,
          },
          {
            "chartType": "threshold",
            "id": "threshold_Sockets",
            "isCapacity": true,
            "isStacked": false,
            "isThreshold": true,
            "isToolbarFilter": false,
            "metric": "Sockets",
            "stroke": "#4cb140",
            "strokeDasharray": "4,3",
            "strokeWidth": 3,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
        "query": {
          "category": "physical",
        },
        "stringId": "Sockets_physical",
        "stroke": "#06c",
      },
    },
  ],
}
`;

exports[`Product RHEL config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "id": "granularity",
      "position": "right",
    },
  ],
  "isDisabledLegendClick": true,
}
`;

exports[`Product RHEL config should apply guest inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product RHEL config should apply guest inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product RHEL config should apply guest inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product RHEL config should apply guest inventory configuration: filtered, missing inventory id 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product RHEL config should apply subscriptions inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "hello world",
    },
    {
      "title": "",
    },
    {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    {
      "title": "2022-01-01",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"quantity"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": true,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "value": "hello world",
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total, {"context":"capacity"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product RHEL config should apply subscriptions inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": "",
    },
    {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"quantity"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": true,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "value": null,
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "value": null,
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total, {"context":"capacity"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product RHEL config should apply subscriptions inventory configuration: filtered, infinite 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "hello world",
    },
    {
      "title": "",
    },
    {
      "title": 2000,
    },
    {
      "title": "2022-01-01",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"quantity"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": false,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "value": "hello world",
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total, {"context":"capacity"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product RHEL config should apply toolbar configuration: filters 1`] = `
[
  {
    "id": "sla",
  },
  {
    "id": "usage",
    "selected": true,
  },
  {
    "id": "category",
  },
]
`;
